force-app/main/default/objects/Suggestion__c/fields/Approved__c.field-meta.xml
<CustomField>
    <fullName>Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Change has been approved</description>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>