force-app/main/default/objects/Suggestion__c/fields/Business_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Case__c</fullName>
    <description>Why is this request important?</description>
    <inlineHelpText>Why is this request important?</inlineHelpText>
    <label>Business Case</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>