force-app/main/default/objects/Suggestion__c/fields/Suggestion_Description__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_Description__c</fullName>
    <label>Suggestion Description</label>
    <type>TextArea</type>
</CustomField>