force-app/main/default/objects/Suggestion__c/fields/Suggestion_ID__c.field-meta.xml
<CustomField>
    <fullName>Suggestion_ID__c</fullName>
    <displayFormat>IMP-{0000000000}</displayFormat>
    <label>Suggestion ID</label>
    <type>AutoNumber</type>
</CustomField>