force-app/main/default/objects/Suggestion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Suggestion_ID__c</columns>
    <columns>NAME</columns>
    <columns>Requestor__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Approved__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>