force-app/main/default/objects/Suggestion__c/listViews/Closed_suggestions.listView-meta.xml
<ListView>
    <fullName>Closed_suggestions</fullName>
    <columns>Suggestion_ID__c</columns>
    <columns>NAME</columns>
    <columns>Requestor__c</columns>
    <columns>Implemented_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Implemented,Rejected</value>
    </filters>
    <label>Closed suggestions</label>
</ListView>