force-app/main/default/objects/Suggestion__c/listViews/New_and_approved_suggestions.listView-meta.xml
<ListView>
    <fullName>New_and_approved_suggestions</fullName>
    <columns>NAME</columns>
    <columns>Requestor__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Approved__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Under Consideration,In Progress</value>
    </filters>
    <label>Open and approved suggestions</label>
</ListView>