force-app/main/default/objects/Suggestion__c/listViews/Open_suggestions.listView-meta.xml
<ListView>
    <fullName>Open_suggestions</fullName>
    <columns>Suggestion_ID__c</columns>
    <columns>Priority__c</columns>
    <columns>NAME</columns>
    <columns>Requestor__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Approved__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Approved,Waiting on Funding approval,Under Consideration,In Progress</value>
    </filters>
    <label>Open suggestions</label>
</ListView>